# wai-computer

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  AUDIT_RESULT.json  BRAIN_REDESIGN.md  BRAIN_SUPERPRODUCT.md  CLAUDE.md  DICTIONARY_LEARNING.md  IOS_MAC_PARITY.json  IOS_MAC_PARITY.md  MATERIALS_BRAIN_PLAN.md  README.md  SPECS.md  TEST_COVERAGE_95_PLAN.md  design-qa.md  fix_tests.py  gpu-rental-worldwide-russia-2026.html  improve1406.md  improve1506.md  improve_ll_1406.md  improve_ll_140626.md  improve_ll_150626.md  pc-build-rtx3090.html  spec170426.md  stt-benchmarks-2026.html  stt-model-picker-2026.html  t-one-hosting-options-2026.html  test_elevenlabs.py  whisper-gpu-research.html
backend/: .dockerignore  .env.example  Caddyfile  Dockerfile  alembic.ini  docker-compose.local.yml  docker-compose.selfhost.yml  docker-compose.yml  pyproject.toml  test_elevenlabs.py
backend/app/: __init__.py  config.py  main.py  mcp_server.py
backend/app/api/: deps.py  summary_audio.py  websocket.py
backend/app/api/routes/: action_items.py  admin.py  agent_chat.py  agents.py  api_keys.py  apps.py  auth.py  benchmarks.py  brain.py  brain_spaces.py  chat.py  companion.py  comparisons.py  deepgram.py  devices.py  dictation.py  digital_agents.py  entities.py  folders.py  inbox.py  items.py  mcp_connect.py  mcp_connections.py  mcp_oauth.py  memory_proposals.py  people.py  personalization.py  qa.py  realtime_transcription.py  realtime_voice.py  recordings.py  reminders.py  schemes.py  search.py  sentry_webhook.py  settings.py  source_catalog.py  system.py  telegram.py  voice.py  (+2 more)
backend/app/billing/: __init__.py  promo_codes.py  quota.py  router.py  service.py  subscriptions.py  webhooks.py
backend/app/billing/providers/: __init__.py  base.py  stripe_provider.py  tinkoff_provider.py
backend/app/core/: __init__.py  agent_capabilities.py  agent_dispatch.py  agent_guard.py  agent_runtime.py  ai_usage.py  api_keys.py  brain.py  brain_ask.py  brain_feed.py  brain_graph.py  brain_maps.py  brain_spaces.py  capture_metadata.py  cerebras_chat.py  chat.py  companion.py  companion_actions.py  companion_actuators.py  companion_resolve.py  comparison.py  comparison_build.py  content.py  conversation_brain.py  cost_model.py  data_ownership.py  deepgram.py  deepgram_usage.py  deepgram_voice_agent.py  device_presence.py  dictation_benchmark_live.py  document_extract.py  elevenlabs.py  elevenlabs_stt.py  email.py  embedding_backfill.py  embeddings.py  entity_dedup.py  entity_graph.py  entity_page_synthesis.py  (+77 more)
backend/app/db/: __init__.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260208_000001_initial_migration.py  20260226_000002_action_item_source.py  20260302_000003_chat_sessions_and_messages.py  20260305_000004_add_user_default_language.py  20260306_000002_recording_folders_and_trash.py  20260306_000005_recording_folders_and_trash.py  20260310_000006_recording_upload_state.py  20260311_200712_dc79b7dd96c1_add_highlights_table.py  20260312_000007_add_chat_session_pinned_at.py  20260312_000008_add_recording_starred_at.py  20260317_000009_add_missing_indexes_and_fix_highlights.py  20260318_000010_add_unique_constraints_folder_tag_names.py  20260327_000011_add_refresh_tokens_table.py  20260330_185127_869f5f0a48e5_add_commitments_digital_agents_user_.py  20260401_130000_add_user_app_lifecycle_fields.py  20260401_190000_add_user_app_deployments.py  20260401_203000_fix_user_app_deployment_timestamp_defaults.py  20260403_120000_add_summary_preferences.py  20260406_120000_drop_user_apps_tables.py  20260407_120000_drop_agents_and_chat_tables.py  20260505_120000_add_mcp_oauth.py  (+121 more)
backend/app/models/: __init__.py  admin.py  agent.py  ai_usage.py  api_key.py  base.py  benchmark.py  billing.py  brain_map.py  brain_space.py  chat.py  commitment.py  companion.py  companion_pending_action.py  comparison.py  deepgram_usage.py  device.py  dictation.py  digital_agent.py  entity.py  highlight.py  item.py  mcp_connection.py  mcp_oauth.py  memory_proposal.py  person.py  personalization.py  recording.py  refresh_token.py  reminder.py  summary_audio.py  telegram.py  user.py  user_app.py  user_memory.py
backend/app/services/: user_apps.py
backend/app/services/agent/: app_builder.py  cloudflare_deploy.py  commitments.py  conversation.py  digital_agents.py  entities.py  language.py  loop.py  metrics.py  rate_limit.py  router.py  soul.py  voice_summary.py  web_search.py
backend/app/tasks/: agent_tasks.py  agents.py  billing_renewals.py  celery_app.py  comparison_generation.py  consolidate_user_memory.py  conversation_linking.py  embedding_backfill.py  item_summary_generation.py  mcp_sync.py  media_import.py  recompile_entity_dossiers.py  recording_audio_processing.py  retry_policy.py  summary_audio_generation.py  summary_generation.py  telegram_album_import.py  telegram_media_import.py  telegram_reminders.py  telegram_summary_audio.py
backend/docs/: billing-launch-checklist.md  billing-setup.md
backend/tests/: __init__.py  conftest.py  conftest.py.backup  test_action_items_routes.py  test_admin_console.py  test_admin_promo_codes.py  test_admin_promo_subscription_mgmt.py  test_agent_capabilities.py  test_agent_chat_extended.py  test_agent_chat_routes.py  test_agent_conversation.py  test_agent_dispatch_and_self_host_contract.py  test_agent_guard.py  test_agent_language.py  test_agent_loop.py  test_agent_metrics.py  test_agent_models.py  test_agent_router.py  test_agent_router_llm.py  test_agent_runtime.py  test_agent_runtime_branches.py  test_agent_runtime_execution.py  test_agent_soul.py  test_agent_tasks.py  test_agent_tools.py  test_agents_routes.py  test_ai_usage.py  test_api_keys.py  test_app_builder.py  test_apps_route_handlers.py  test_apps_routes.py  test_auth.py  test_auth_edge_cases.py  test_auth_flows.py  test_background_tasks.py  test_benchmarks.py  test_billing_checkout_end_to_end.py  test_billing_invoice_migration.py  test_billing_plans_api.py  test_billing_recurrent_compliance.py  (+254 more)
backend/tests/eval/: __init__.py  brain_eval.py  golden.py  test_eval_harness.py
(+1273 files in other folders)
