[project]
name = "waicomputer-backend"
version = "0.1.0"
description = "WaiComputer - AI Second Brain Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=22.0.0",
    "websockets>=12.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.0",
    "deepgram-sdk>=3.11.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=2.3.0",
    "boto3>=1.34.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "bcrypt<5.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "resend>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "coverage>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = """
    -m "not integration and not slow"
    --cov=app
    --cov-report=term-missing
    --cov-fail-under=83
"""
markers = [
    "integration: live API integration tests against the deployed server (run with: pytest -q -m integration --no-cov)",
    "slow: performance and stress tests (run with: pytest -m slow --no-cov)",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/db/*",
    "app/models/*",
]

[tool.coverage.report]
show_missing = true
