[project]
name = "waicomputer-backend"
version = "0.1.0"
description = "WaiComputer - AI Second Brain Backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=22.0.0",
    "websockets>=12.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.0",
    "openai>=2.30.0,<3.0.0",
    "google-genai>=2.13.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "resend>=2.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "croniter>=2.0.0",
    "mcp>=1.27.0,<2",
    "speechbrain>=1.0.2",
    "torchaudio",
    "pydub>=0.25",
    "audioop-lts>=0.2.2; python_version >= '3.13'",
    "stripe>=15.0.0,<16.0.0",
    # Universal second-brain source fetchers (URL -> text content).
    "trafilatura>=2.0.0,<3.0",
    "youtube-transcript-api>=1.2.4,<2.0",
    "pdfplumber>=0.11.9,<1.0",
    "kreuzberg>=4.9.9,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "coverage>=7.0.0",
    "fakeredis>=2.36.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"app/db/migrations/*" = ["E501"]
"app/services/agent/*" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = """
    -m "not integration and not slow"
    --cov=app
    --cov-report=term-missing
    --cov-fail-under=95
"""
markers = [
    "integration: live API integration tests against the deployed server (run with: pytest -q -m integration --no-cov)",
    "slow: performance and stress tests (run with: pytest -m slow --no-cov)",
]

[tool.coverage.run]
source = ["app"]
concurrency = ["greenlet", "thread"]
omit = [
    "app/db/*",
    "app/models/*",
]

[tool.coverage.report]
show_missing = true
